Update securityconfig for netlify